Bug 10861 - socket_wrapper does not build on systems without SO_PROTOCOL (< Linux 2.6.32)
Summary: socket_wrapper does not build on systems without SO_PROTOCOL (< Linux 2.6.32)
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Test infrastructure (show other bugs)
Version: unspecified
Hardware: All Linux
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-09 08:55 UTC by Björn Baumbach
Modified: 2014-10-13 10:49 UTC (History)
2 users (show)

See Also:


Attachments
proposed patch for 4.2, cherry-picked from master (1.39 KB, patch)
2014-10-09 08:56 UTC, Björn Baumbach
asn: review+
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Baumbach 2014-10-09 08:55:03 UTC
socket_wrapper does not build on systems without SO_PROTOCOL, which was introduced with Linux 2.6.32.

[2152/3962] Compiling lib/socket_wrapper/socket_wrapper.c
../lib/socket_wrapper/socket_wrapper.c: In function 'swrap_getsockopt':
../lib/socket_wrapper/socket_wrapper.c:3172: error: 'SO_PROTOCOL' undeclared (first use in this function)
../lib/socket_wrapper/socket_wrapper.c:3172: error: (Each undeclared identifier is reported only once
../lib/socket_wrapper/socket_wrapper.c:3172: error: for each function it appears in.)
Waf: Leaving directory `/usr/src/packages/BUILD/samba-4.2.0rc1/bin'
Build failed:  -> task failed (err #1): 
        {task: cc socket_wrapper.c -> socket_wrapper_1.o}
make: *** [all] Error 1
Comment 1 Björn Baumbach 2014-10-09 08:56:31 UTC
Created attachment 10332 [details]
proposed patch for 4.2, cherry-picked from master
Comment 2 Andreas Schneider 2014-10-09 12:21:51 UTC
Karolin, please add the patch to 4.2. Thanks!
Comment 3 Karolin Seeger 2014-10-09 19:00:56 UTC
Pushed to autobuild-v4-2-test.