SO_PROTOCOL is platform-dependent

SO_PROTOCOL is not defined on all platforms. In particular, OSX doesn't
include it and so far I haven't found any compatible declaration.

Signed-off-by: Jakub Hrozek <jakub.hrozek@gmail.com>
Reviewed-by: Andreas Schneider <asn@samba.org>
Reviewed-by: Michael Adam <obnox@samba.org>
(cherry picked from commit 5e70d80e7d7752a1df16b871d57fbcd8334a44e6)

Bug: https://bugzilla.samba.org/show_bug.cgi?id=10861
socket_wrapper does not build on systems without SO_PROTOCOL (< Linux 2.6.32)

Autobuild-User(v4-2-test): Karolin Seeger <kseeger@samba.org>
Autobuild-Date(v4-2-test): Thu Oct  9 23:38:36 CEST 2014 on sn-devel-104